# CGALDemo

./: CMakeLists.txt  readme.md  template.py  template.txt
Delaunay2D/: CMakeLists.txt  Delaunay2D.cpp  points.pts.cgal  readme.md
FloatCompute/: CMakeLists.txt  readme.md  surprising.cpp
HelloWorld/: CMakeLists.txt  points_and_segment.cpp  readme.md
array_convex_hull_2/: CMakeLists.txt  array_convex_hull_2.cpp  readme.md
convex_hull_yz/: CMakeLists.txt  convex_hull_yz.cpp  readme.md
exact/: CMakeLists.txt  exact.cpp  readme.md
for_loop_2/: CMakeLists.txt  for_loop_2.cpp  readme.md
