CMAKE_MINIMUM_REQUIRED(VERSION 3.3 FATAL_ERROR)
PROJECT(CGALExamples)
find_package(CGAL QUIET)
include(${CGAL_USE_FILE})
#set(CMAKE_SUPPRESS_REGENERATION FALSE)
add_subdirectory(HelloWorld)
add_subdirectory(FloatCompute)
add_subdirectory(exact)
add_subdirectory(array_convex_hull_2) 
add_subdirectory(convex_hull_yz) 
add_subdirectory(Delaunay2D) 
